force-app/main/default/objects/recTypesAccount__c/recTypesAccount__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - Account</label>
</CustomObject>