force-app/main/default/objects/recTypesAccount__c/fields/Additional_ECN__c.field-meta.xml
<CustomField>
    <fullName>Additional_ECN__c</fullName>
    <label>Additional ECN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>