force-app/main/default/objects/recTypesAccount__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <label>Affiliate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>