force-app/main/default/objects/recTypesAccount__c/fields/Channel_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Channel_Agreement__c</fullName>
    <label>Channel Agreement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>