force-app/main/default/objects/recTypesAccount__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>