force-app/main/default/objects/recTypesAccount__c/fields/eNett_Internal__c.field-meta.xml
<CustomField>
    <fullName>eNett_Internal__c</fullName>
    <label>eNett Internal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>