force-app/main/default/objects/recTypesAccount__c/fields/eNett_Internal_Demo__c.field-meta.xml
<CustomField>
    <fullName>eNett_Internal_Demo__c</fullName>
    <label>eNett Internal Demo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>