force-app/main/default/objects/recTypesAccount__c/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <label>Test Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>